<?xml version="1.0" encoding="utf-8"?>

<!-- Created by Suyono on 4/11/2015. -->

<LinearLayout
    android:background="@drawable/bg3"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingBottom="10.0dip">
    <FrameLayout
        android:id="@+id/hider"
        android:layout_width="fill_parent"
        android:layout_height="199dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/Base.Theme.AppCompat.Light">

        <com.suyonoion.flymeosguide.coveranim.KenBurnsView android:id="@+id/header_picture" android:layout_width="fill_parent" android:layout_height="wrap_content" />


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:paddingBottom="-30.0dip">
            <com.suyonoion.flymeosguide.CircularImageView
                app:civ_border="true"
                app:civ_borderColor="#FFFFFFFF"
                app:civ_borderWidth="4dp"
                app:civ_selector="true"
                app:civ_selectorColor="#4403a9f4"
                app:civ_selectorStrokeColor="#aa5677fc"
                app:civ_selectorStrokeWidth="4dp"
                app:civ_shadow="true"
                android:clickable="true"
                android:layout_gravity="center"
                android:id="@+id/header_logo"
                android:layout_width="@dimen/header_logo_size"
                android:layout_height="@dimen/header_logo_size"
                android:src="@drawable/suyono" android:contentDescription="@string/nama"
                android:layout_marginTop="30dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nama"
                android:id="@+id/textView35"
                android:layout_gravity="center_horizontal|bottom"
                android:textSize="21.0dip"
                android:textColor="#ffffe9f6"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:layout_below="@+id/header_logo" />

        </RelativeLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hider"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="Flyme OS Guide" android:textSize="25.0dip"
            android:textColor="#ffffffff"
            android:textStyle="italic"
            android:background="@drawable/shapeutama"
            android:gravity="center"
            android:padding="3dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="V2.0"
            android:textColor="#ffffffff"
            android:id="@+id/textView34"
            android:layout_gravity="center_horizontal"
            android:padding="3dp"
            android:background="@drawable/shapeutama"
            android:gravity="center_horizontal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="facebook.com/suyono.ion"
            android:gravity="center|center_horizontal"
            android:textColor="#29000000"
            android:textColorLink="#ffeaffa5"
            android:autoLink="all"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:background="@drawable/shapeutama"
            android:padding="3dp"
            android:paddingTop="20dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="Android Development Tips , Guide"
            android:gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:background="@drawable/shapeutama"
            android:padding="3dp" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" android:text="Tricks, Tools And Much More"
            android:gravity="center_horizontal"
            android:textColor="#ffffffff"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:background="@drawable/shapeutama"
            android:padding="3dp" />

        <TextClock
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textClock"
            android:layout_gravity="center_horizontal|bottom"
            android:textColor="#ffffffff"
            android:background="@drawable/shapeutama"
            android:gravity="center_horizontal"
            android:padding="3dp"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="75dp" />

        <Spinner
            android:id="@+id/spinner"
            android:drawSelectorOnTop="true"
            android:prompt="@string/app_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/shapeutama"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:gravity="center" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/note1"
        android:id="@+id/note1"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:background="@drawable/shapeutama"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:textColor="#ffd6ffd6"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/note2"
        android:id="@+id/note2"
        android:background="@drawable/shapeutama"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="#ffd6ffd6"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/makasih"
        android:id="@+id/makasih"
        android:background="@drawable/shapeutama"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="#ffd6ffd6"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp" />


    </LinearLayout>

</LinearLayout>